<resources>
    <string name="app_name">MoviesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_app_title">Movies library</string>
    <string name="email">Email</string>
    <string name="forgot_your_password">forgot your password</string>
    <string name="dashboard">Dashboard</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="remember_password">remember password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">create account</string>
    <string name="registration">Registration</string>
    <string name="password">Password</string>
    <string name="poster_of_the_film">Poster of the film</string>
    <string name="release_date">Release Date:</string>
</resources>