<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".presentation.auth.SignInFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome to Movies library"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:fontFamily="@font/roboto_black"
        android:layout_marginBottom="24dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="Password"
            android:inputType="numberPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/llRegistration"
        android:layout_width="328dp"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvRememberPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/remember_password"
            android:gravity="start"
            android:layout_weight="1"/>

        <Switch
            android:id="@+id/switchSavePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UseSwitchCompatOrMaterialXml"
            android:gravity=""/>

    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="328dp"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:text="@string/sign_in"
        android:fontFamily="@font/roboto_medium"/>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/forgot_your_password"
        android:clickable="true"
        android:focusable="true" />

    <Button
        android:id="@+id/btnRegistration"
        android:layout_width="328dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/create_account"
        android:textColor="@color/dark_gray"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/roboto_medium" />

</LinearLayout>